--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -4,14 +4,39 @@
     background-position-y: -250px;
     background-position-x: 50px;
     background-size: 40em;
+    @media (min-width: 42em) {
+        background-position-y: -150px;
+        background-position-x: 200px;
+        background-size: 50em;
+    }
     @media (min-width: 62em) {
         background-size: 50em;
         background-position-y: -150px;
         background-position-x: 750px;
     }
     nav {
-        .navbar {
+        .toggle {
+            border: none;
+            background: transparent;
+        }
+        .navbarNav {
             display: none;
+        }
+        .show {
+            display: block;
+            width: 80%;
+            max-width: 400px;
+            background-color: $colorVaryLightGray;
+            padding: 34px;
+            margin: 350px auto 0 auto;
+            border-radius: 8px;
+            text-align: center;
+            position: absolute;
+        }
+        @media (min-width: 42em) {
+            .show {
+                left: 30%;
+            }
         }
         @media (min-width: 62em) {
             button {
@@ -23,7 +48,7 @@
                     opacity: 0.7;
                 }
             }
-            .navbar {
+            .navbarNav {
                 display: block;
                 ul {
                     li {
@@ -36,7 +61,7 @@
                     }
                 }
             }
-            .hamburger {
+            .toggle {
                 display: none;
             }
         }
