--- a/styles/_review.scss
+++ b/styles/_review.scss
@@ -4,14 +4,33 @@
         margin-top: 15rem;
     }
     .review-container {
-        .review {
-            background-color: $colorVaryLightGray;
+        position: relative;
+        width: 100%;
+        height: 255px;
+        margin: 100px auto 40px;
+        @media (min-width: 62em) {
             position: relative;
+            width: 100%;
+            padding: 40px 0;
+            height: fit-content;
+            overflow-x: hidden;
+        }
+        .review {
+            display: none;
+            background-color: $colorVaryLightGray;
+            position: absolute;
+            top: 0;
+            left: auto;
+            right: auto;
+            width: 90%;
+            max-width: 500px;
+            height: 245px;
             padding: 2rem 0;
             border-radius: 1rem;
             img {
                 position: absolute;
                 top: -25px;
+                left: 40%;
                 width: 50px;
                 @media (min-width: 62em) {
                     top: -35px;
@@ -21,17 +40,22 @@
             p {
                 color: $colorDarkGrayishBlue;
             }
+            @media (min-width: 62em) {
+                position: relative;
+                left: 290px;
+                flex-shrink: 0;
+                margin: 50px 30px 0 0;
+                width: 540px;
+                height: 220px;
+                text-align: center;
+                flex-direction: column;
+                padding-top: 60px;
+                display: block;
+            }
         }
-        // .review1 {
-        //     @media (min-width: 62em) {
-        //         transform: translate(-45px);
-        //     }
-        // }
-        // .review3 {
-        //     @media (min-width: 62em) {
-        //         transform: translate(45px);
-        //     }
-        // }
+        .active-card {
+            display: block;
+        }
     }
     .btn {
         background-color: $colorBrightRed;
@@ -41,6 +65,25 @@
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
         &:hover {
             opacity: 0.7;
+        }
+    }
+    .dots {
+        .dot {
+            cursor: pointer;
+            height: 10px;
+            width: 10px;
+            margin: 0 2px 45px;
+            background-color: #fff;
+            border: 2px solid $colorBrightRed;
+            display: inline-block;
+            opacity: 0.6;
+            @media (min-width: 62em) {
+                display: none;
+            }
+        }
+        .active {
+            background-color: $colorBrightRed;
+            opacity: 1;
         }
     }
 }
