--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,14 @@
   background-size: 40em;
 }
 
+@media (min-width: 42em) {
+  .intro {
+    background-position-y: -150px;
+    background-position-x: 200px;
+    background-size: 50em;
+  }
+}
+
 @media (min-width: 62em) {
   .intro {
     background-size: 50em;
@@ -18,8 +26,31 @@
   }
 }
 
-.intro nav .navbar {
+.intro nav .toggle {
+  border: none;
+  background: transparent;
+}
+
+.intro nav .navbarNav {
   display: none;
+}
+
+.intro nav .show {
+  display: block;
+  width: 80%;
+  max-width: 400px;
+  background-color: #fafafa;
+  padding: 34px;
+  margin: 350px auto 0 auto;
+  border-radius: 8px;
+  text-align: center;
+  position: absolute;
+}
+
+@media (min-width: 42em) {
+  .intro nav .show {
+    left: 30%;
+  }
 }
 
 @media (min-width: 62em) {
@@ -32,16 +63,16 @@
   .intro nav button:hover {
     opacity: 0.7;
   }
-  .intro nav .navbar {
+  .intro nav .navbarNav {
     display: block;
   }
-  .intro nav .navbar ul li a {
+  .intro nav .navbarNav ul li a {
     color: #1d1e25;
   }
-  .intro nav .navbar ul li a:hover {
+  .intro nav .navbarNav ul li a:hover {
     opacity: 0.7;
   }
-  .intro nav .hamburger {
+  .intro nav .toggle {
     display: none;
   }
 }
@@ -52,6 +83,13 @@ header {
   background-position-x: 250px;
   background-position-y: 310px;
   background-size: 20em;
+}
+
+@media (min-width: 42em) {
+  header {
+    background-position-x: 550px;
+    background-position-y: 510px;
+  }
 }
 
 @media (min-width: 62em) {
@@ -239,9 +277,35 @@ header .intro-content-wrapper .intro-content button:hover {
   }
 }
 
-.wrapper .review-container .review {
-  background-color: #fafafa;
+.wrapper .review-container {
   position: relative;
+  width: 100%;
+  height: 255px;
+  margin: 100px auto 40px;
+}
+
+@media (min-width: 62em) {
+  .wrapper .review-container {
+    position: relative;
+    width: 100%;
+    padding: 40px 0;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    overflow-x: hidden;
+  }
+}
+
+.wrapper .review-container .review {
+  display: none;
+  background-color: #fafafa;
+  position: absolute;
+  top: 0;
+  left: auto;
+  right: auto;
+  width: 90%;
+  max-width: 500px;
+  height: 245px;
   padding: 2rem 0;
   border-radius: 1rem;
 }
@@ -249,6 +313,7 @@ header .intro-content-wrapper .intro-content button:hover {
 .wrapper .review-container .review img {
   position: absolute;
   top: -25px;
+  left: 40%;
   width: 50px;
 }
 
@@ -263,6 +328,29 @@ header .intro-content-wrapper .intro-content button:hover {
   color: #9095a7;
 }
 
+@media (min-width: 62em) {
+  .wrapper .review-container .review {
+    position: relative;
+    left: 290px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    margin: 50px 30px 0 0;
+    width: 540px;
+    height: 220px;
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 60px;
+    display: block;
+  }
+}
+
+.wrapper .review-container .active-card {
+  display: block;
+}
+
 .wrapper .btn {
   background-color: #f25f3a;
   color: #fafafa;
@@ -274,6 +362,28 @@ header .intro-content-wrapper .intro-content button:hover {
 
 .wrapper .btn:hover {
   opacity: 0.7;
+}
+
+.wrapper .dots .dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px 45px;
+  background-color: #fff;
+  border: 2px solid #f25f3a;
+  display: inline-block;
+  opacity: 0.6;
+}
+
+@media (min-width: 62em) {
+  .wrapper .dots .dot {
+    display: none;
+  }
+}
+
+.wrapper .dots .active {
+  background-color: #f25f3a;
+  opacity: 1;
 }
 
 footer {
