--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -13,14 +13,18 @@ footer {
                 font-size: 0.8rem;
             }
         }
-    }
-    button {
-        background-color: $colorBrightRed;
-        color: $colorVaryLightGray;
-        font-size: 0.8rem;
-        padding: 0.8rem 1.5rem;
-        &:hover {
-            opacity: 0.7;
+        button {
+            background-color: $colorBrightRed;
+            color: $colorVaryLightGray;
+            font-size: 0.8rem;
+            padding: 0.8rem 1.5rem;
+            &:hover {
+                opacity: 0.7;
+            }
+        }
+        small {
+            color: $colorBrightRed;
+            font-size: 0.8rem;
         }
     }
     .list1 {
@@ -61,7 +65,7 @@ footer {
         @media (min-width: 62em) {
             position: absolute;
             right: 110px;
-            bottom: 50px;
+            bottom: 30px;
         }
     }
 }
