--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -32,6 +32,11 @@
             border-radius: 8px;
             text-align: center;
             position: absolute;
+            ul {
+                a {
+                    color: $colorVeryDarkBlue;
+                }
+            }
         }
         @media (min-width: 42em) {
             .show {
