--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,10 @@
   position: absolute;
 }
 
+.intro nav .show ul a {
+  color: #1d1e25;
+}
+
 @media (min-width: 42em) {
   .intro nav .show {
     left: 30%;
@@ -419,15 +423,20 @@ footer form input::placeholder {
   font-size: 0.8rem;
 }
 
-footer button {
+footer form button {
   background-color: #f25f3a;
   color: #fafafa;
   font-size: 0.8rem;
   padding: 0.8rem 1.5rem;
 }
 
-footer button:hover {
+footer form button:hover {
   opacity: 0.7;
+}
+
+footer form small {
+  color: #f25f3a;
+  font-size: 0.8rem;
 }
 
 @media (min-width: 62em) {
@@ -472,7 +481,7 @@ footer p {
   footer p {
     position: absolute;
     right: 110px;
-    bottom: 50px;
+    bottom: 30px;
   }
 }
 
