--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -15,6 +15,7 @@
         background-position-x: 750px;
     }
     nav {
+        margin: 0 4rem;
         .toggle {
             border: none;
             background: transparent;
